Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/switchextra/SwitchStatementBroken.out
SwitchStatementBroken.java:15:13: compiler.err.switch.mixing.case.types
1 error
